# hydrogen

./: CMakeLists.txt
src/tacUI/: CMakeLists.txt  lpdrumkit.cpp  lpdrumkit.h  lpmixer.cpp  lpmixer.h  lpmode.cpp  lpmode.h  lppatterneditor.cpp  lppatterneditor.h  main.cpp  taclaunchpad.cpp  taclaunchpad.h  tacui.cpp  tacui.h
src/tacUI/launchpad/: liblaunchpad.cpp  liblaunchpad.h
